--- a/public/404.html
+++ b/public/404.html
@@ -37,7 +37,7 @@
     })();
 </script><div class="container main-container flex on-phone--column extended ">
             <aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -100,7 +100,7 @@
 
 
 
-                <span>Dark Mode</span>
+                <span>暗色模式</span>
             </li>
         
     </ol>
@@ -108,8 +108,8 @@
 
             <main class="main full-width">
     <div class="not-found-card">
-        <h1 class="article-title">Not Found</h1>
-        <h2 class="article-subtitle">This page does not exist.</h2>
+        <h1 class="article-title">404 错误</h1>
+        <h2 class="article-subtitle">页面不存在</h2>
     </div>
     <footer class="site-footer">
     <section class="copyright">
